// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Time does not show 0 delay number 1`] = `
<div
  class="Time__Wrap-sc-1pwgwbu-1 cNddgD"
>
  <span
    class="Time__TimeDisplay-sc-1pwgwbu-2 kVayNL"
    data-testid="time"
  >
    13:55
  </span>
</div>
`;

exports[`Time no time 1`] = `null`;

exports[`Time showOriginalTime = false 5 Minutes early 1`] = `
<div
  class="Time__Wrap-sc-1pwgwbu-1 kcZGMH"
>
  <span
    class="Time__TimeDisplay-sc-1pwgwbu-2 kVayNL"
    data-testid="time"
  >
    13:55
  </span>
  <span
    class="Time__Delay-sc-1pwgwbu-0 gvKQsU"
    data-testid="delay"
  >
    -5
  </span>
</div>
`;

exports[`Time showOriginalTime = false 10 Minutes delay 1`] = `
<div
  class="Time__Wrap-sc-1pwgwbu-1 fyCnaS"
>
  <span
    class="Time__TimeDisplay-sc-1pwgwbu-2 kVayNL"
    data-testid="time"
  >
    13:55
  </span>
  <span
    class="Time__Delay-sc-1pwgwbu-0 gqrueJ"
    data-testid="delay"
  >
    +10
  </span>
</div>
`;

exports[`Time showOriginalTime = true 5 Minutes early 1`] = `
<div
  class="Time__Wrap-sc-1pwgwbu-1 cIUtTX"
>
  <span
    class="Time__TimeDisplay-sc-1pwgwbu-2 kVayNL"
    data-testid="time"
  >
    14:00
  </span>
  <span
    class="Time__Delay-sc-1pwgwbu-0 gvKQsU"
    data-testid="delay"
  >
    -5
  </span>
</div>
`;

exports[`Time showOriginalTime = true 10 Minutes delay 1`] = `
<div
  class="Time__Wrap-sc-1pwgwbu-1 cIUtTX"
>
  <span
    class="Time__TimeDisplay-sc-1pwgwbu-2 kVayNL"
    data-testid="time"
  >
    13:45
  </span>
  <span
    class="Time__Delay-sc-1pwgwbu-0 gqrueJ"
    data-testid="delay"
  >
    +10
  </span>
</div>
`;

exports[`Time shows 0 delay number 1`] = `
<div
  class="Time__Wrap-sc-1pwgwbu-1 kcZGMH"
>
  <span
    class="Time__TimeDisplay-sc-1pwgwbu-2 kVayNL"
    data-testid="time"
  >
    13:55
  </span>
  <span
    class="Time__Delay-sc-1pwgwbu-0 gvKQsU"
    data-testid="delay"
  >
    +0
  </span>
</div>
`;
